--- a/public/scss/src/scss/components/_button.scss
+++ b/public/scss/src/scss/components/_button.scss
@@ -100,7 +100,7 @@
             height: 100%;
             top: 0;
             left: 0;
-            background-image: url('/public/img/arrow.svg');
+            background-image: url('/img/icones/arrow.svg');
             background-position: center;
             background-size: contain;
         }
