--- a/public/scss/src/scss/components/_slider.scss
+++ b/public/scss/src/scss/components/_slider.scss
@@ -1,7 +1,7 @@
 .slider{
 	overflow: hidden;
 	position: relative;
-	background-color: grey;
+	background-color: $grey;
 	width: 100%;
 	height: rem(360);
 	display: flex;
